meta tag typo correction

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="haiku">
         <meta name="description" content="Randomised Haiku">
         <meta name="author" content="Eric Fabrizi">
-        <meta name="viewport" content="width=device-width, intial scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Lotus</title>
         <link rel="stylesheet" type="text/css" href="style.css">
